# serializer version: 1
# name: test_entities[number.ebro_0001_duracion_de_la_climatizacion-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 5,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.ebro_0001_duracion_de_la_climatizacion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:timer-cog',
    'original_name': 'Duración de la climatización',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_duracion_de_la_climatizacion',
    'supported_features': 0,
    'translation_key': 'duracion_de_la_climatizacion',
    'unique_id': 'LSJA0000000000001_clima_duracion',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_entities[number.ebro_0001_duracion_de_la_climatizacion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Duración de la climatización',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:timer-cog',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 5,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.ebro_0001_duracion_de_la_climatizacion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15.0',
  })
# ---
# name: test_entities[number.ebro_0001_limite_de_carga-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 50,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.ebro_0001_limite_de_carga',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:battery-charging-80',
    'original_name': 'Límite de carga',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_limite_de_carga',
    'supported_features': 0,
    'translation_key': 'limite_de_carga',
    'unique_id': 'LSJA0000000000001_carga_limite',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[number.ebro_0001_limite_de_carga-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Límite de carga',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:battery-charging-80',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 50,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.ebro_0001_limite_de_carga',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '80.0',
  })
# ---
